# aws-iam-agent

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
aws_iam_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
