[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_iam_security_agent"
version = "2.0.18"
description = "AWS IAM security agent with GPT-4 for key rotation & secrets management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sujay KS", email = "sujayks007@gmail.com"}
]
keywords = ["aws", "iam", "security", "gpt4", "langchain", "secrets-manager"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3",
    "langchain",
    "langchain-openai",
    "langchain-core",
    "python-dotenv",
]

[project.scripts]
aws-iam-agent = "main:main"
aws-iam-security-agent = "main:main"

[project.urls]
Homepage = "https://github.com/sujay2306/aws-iam-security-agent"
